--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,18 @@ services:
   auth-server:
     container_name: oauth2-service
     restart: always
+    environment:
+      #USER: netedge
+      #PATH: "$PATH:/home/netedge/.local/bin"
+      ME_CONFIG_MONGODB_SERVER: "mongodb"
+      ME_CONFIG_MONGODB_PORT: 27017
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ""
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ""
     depends_on: 
       - mongodb
     links:
       - mongodb
-    image: arom98/auth-server:5.0
+    image: arom98/auth-server:6.7
     ports:
       - "5001:5001"
   mongodb:
