--- a/openid-server/dockerfile
+++ b/openid-server/dockerfile
@@ -2,18 +2,18 @@ FROM alpine:3.17.1
 
 RUN apk update
 RUN apk add --no-cache python3 py3-pip
+RUN pip install --upgrade pip
 
-# Instalamos os módulos
-RUN pip install requests pyjwt cryptography flask python2-secrets pymongo jwcrypto oauthlib 
+COPY requirements.txt /app/requirements.txt
 
 WORKDIR /app
-#criamos a pasta template
-#RUN mkdir templates
-# Copiamos o resto
-COPY openid.py .
-COPY credentials.json .
-# Expomos a porta
-EXPOSE 5000
-# Colocamos o servidor a correr
-CMD [ "python", "openid.py" ]
 
+RUN pip install -r requirements.txt
+
+COPY . /app
+
+ENV PORT 5000
+
+EXPOSE 5000
+
+CMD [ "python", "openid.py" ]
