--- a/openid-server/requirements.txt
+++ b/openid-server/requirements.txt
@@ -1,9 +1,6 @@
 flask==2.2.2
-werkzeug == 2.2.2
 pymongo==4.3.3
-jsonschema==4.17.3
 requests==2.28.1
 flask-cors == 3.0.10
-jwcrypto==1.4.2
-oauthlib==3.1.0
 pymongo==4.3.3
+pyjwt==2.5.0
