alteração docker file

--- a/auth-server/dockerfile
+++ b/auth-server/dockerfile
@@ -3,15 +3,21 @@ FROM alpine:3.17.1
 RUN apk update
 RUN apk add --no-cache python3 py3-pip
 
+RUN pip install --upgrade pip
+
 # Instalamos os módulos
-RUN pip install requests pyjwt cryptography flask python2-secrets pymongo bcrypt jsonschema
+#RUN pip install requests pyjwt cryptography flask python2-secrets pymongo bcrypt jsonschema
 
 WORKDIR /app
 #criamos a pasta template
 #RUN mkdir templates
 # Copiamos o resto
-COPY auth_server.py .
-COPY schema.json .
+#COPY auth_server.py .
+#COPY schema.json .
+COPY . /app
+ENV PATH="$PATH:/app/.local/bin"
+RUN pip install -r requirements.txt
+
 # Expomos a porta
 EXPOSE 5001
 # Colocamos o servidor a correr
